# Karen

./: .env.example  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CLAUDE_TODO_PHASE1.md  CLAUDE_TODO_PHASE2.md  CLAUDE_TODO_PHASE3.md  CLAUDE_TODO_PHASE4.md  README.md  REVIEW_FIXES.md  ROADMAP.md  benchmark_pure.py  benchmark_speed.py  desktop_app.py  desktop_client.py  karen.bat  karen.ps1  main.py  pyproject.toml  requirements.txt  setup.py  test_all.py
agents/: factory.py  llm.py  nodes.py  prompts.py  search.py  tools.py
cognition/: __init__.py  emotional_state.py  engine.py  human_mind.py  metacognition.py  persona.py  tool_engine.py  types.py  utils.py
core/: auth.py  cache.py  config.py  db_utils.py  document_parser.py  export.py  intent.py  mcp_manager.py  mcp_plugin_adapter.py  memory_client.py  model_router.py  plugin_system.py  rag.py  summarizer.py  utils.py  vector_store.py
graph/: orchestrator.py
hot_and_cold_memory/: __init__.py
interface/: human_interface.py
karen/: .gitignore  benchmark_pure.py  benchmark_speed.py  desktop_client.py  requirements.txt  test_all.py
prompts/: coordinator_prompt.py
skills/: README.md  SKILL_SPEC.md
state/: manager.py  model_config_manager.py  model_tiers.json  persistence.py  rag_config.json  stats.py
tests/: conftest.py  test_agents.py  test_auth.py  test_graph.py  test_intent.py  test_local_only.py  test_message_order.py  test_skills.py  test_subagent_aggregator.py  test_subagent_integration.py  test_subagent_scheduler.py
tools/: _code_runner.py  browser_tools.py  code_executor.py  search.py  (+1 more)
(+151 files in other folders)
