[project]
name = "karen-ai"
version = "0.1.0"
description = "Karen AI - Multi-Agent Chat System"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0,<4.0.0",
    "flask-socketio>=5.3.0,<6.0.0",
    "flask-cors>=4.0.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langgraph>=0.2.0,<0.3.0",
    "pywebview>=5.0,<6.0",
    "mcp>=1.20.0,<2.0.0",
    "pypdf>=4.0.0,<5.0.0",
    "requests>=2.31.0,<3.0.0",
    "ddgs>=9.0.0,<10.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "qdrant-client>=1.10.0,<2.0.0",
    "sentence-transformers>=2.7.0,<3.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
implicit_optional = true
warn_no_return = false
disallow_any_expr = false
disallow_untyped_defs = false
disallow_untyped_calls = false
strict_optional = false

[[tool.mypy.overrides]]
module = "hot_and_cold_memory.*"
ignore_errors = true
